<resources>
    <string name="app_name">AndroidShow</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="debug_fragment_databinding_warning">Debug 提示：此 Fragment 未遵循 DataBinding 严格模式，存在 视图调用的 Null 安全风险</string>
    <string name="debug_activity_databinding_warning">Debug 提示：此 Activity 未遵循 DataBinding 严格模式，存在 视图调用的 Null 安全风险</string>
    <string name="image">image</string>

    <!-- Plex -->
    <string name="home">Home</string>
    <string name="discover">Discover</string>
    <string name="library">Library</string>
    <string name="upcoming">Upcoming</string>
    <string name="streaming">Streaming</string>
    <string name="live_text">LIVE</string>
    <string name="genre">Genre</string>
    <string name="premuim">Premuim</string>
    <string name="movie_rating">8.5</string>
    <string name="seasons_8">剧集:8</string>
    <string name="movie_genres_text">Thriller, Action, Sci Fi </string>
    <string name="play_trailer">播放 预告片</string>
    <string name="release_date">发布 日期</string>
    <string name="synopsis">简介</string>
    <string name="details">简介描述</string>
    <string name="starring">评价</string>
    <string name="sort_by">排序</string>
    <string name="title">标题</string>
    <string name="lecture">浏览</string>
    <string name="movies">电影</string>
    <string name="series">电视剧</string>
    <string name="animes">动漫</string>
    <string name="views">观看人数: </string>
    <string name="seasons">剧集</string>
    <string name="movie_original_label">电影标题</string>
    <string name="movie_release_label">2019</string>
    <string name="movie_overview_label">概述</string>
    <string name="movie_overview_text">具体描述</string>
    <string name="movie_cast_label">演员表</string>
    <string name="relateds">相关推荐</string>
    <string name="latest_channels">最新影片</string>
    <string name="recommend_movie">推荐影片</string>
    <string name="trending_movie">流行影片</string>
    <string name="release_movie">最新发行</string>
    <string name="commercial">商业</string>
    <string name="popular_movie">最受欢迎</string>
    <string name="popular_series">流行剧场</string>
    <string name="substitles">字幕</string>
    <string name="qualities">质量</string>
    <string name="controller_time_position_text_default">00:00:00</string>
    <string name="lists_series">美剧</string>
    <string name="lists_animes">动漫</string>
    <string name="up_next">Up Next in : </string>
    <string name="about_wifi_warning">你选了只在wifi环境下播放,请去设置页更换</string>
    <string name="back">返回</string>
    <string name="play_media_as_embed">媒体源已经加载</string>
    <string name="report_broken_link">媒体源已经失效</string>
    <string name="lists_streaming">直播</string>
    <string name="movie_time">41 min</string>
    <string name="episodes">Episodes</string>
    <string name="next_episode">Next Episode</string>
    <string name="audio">Audio</string>
    <string name="skip_recap">跳过 介绍</string>
    <string name="no_relateds_movies_found">未找到相关电影</string>
    <string name="genres_list_is_empty">Genres List is empty</string>
    <string name="please_try_another_genre">Please try another genre.</string>
    <string name="search_movies_series">Search Movies, Series,Animes,Streaming…</string>
    <string name="oh_darn_we_don_t_have_that">Oh darn. We don\'t have that</string>
    <string name="movies_amp_series"><![CDATA[MOVIES & Series]]></string>
    <string name="suggested_programmes">Suggested Programmes</string>
    <string name="try_searching_for_another_movie_show">Try Searching for another movie,show</string>
    <!-- Plex-Queue -->
    <string name="mylist">My List</string>
    <string name="plan_name">NAME</string>
    <string name="player_default">default</string>
    <string name="player_43">4:3</string>
    <string name="choose_your_launch_player">选择要启用的播放器</string>
    <string name="player_169">16:9</string>
    <string name="player_fullscreen">full screen</string>
    <string name="player_room">Zoom</string>
    <string name="restart">Restart</string>
    <string name="source_quality">Select Source Quality</string>
    <string name="lists_movies">Lists of Movies</string>
    <string name="from_history">from your watching history ?</string>
    <string name="added_stream_wichlist">Added To Watchlist</string>
    <string name="removed_stream_watch_list">Removed From Watchlist</string>
    <string name="unable_to_get_genres">Unable to Get Genres Lists</string>
    <string name="added_watchlist">Added To Watchlist</string>


    <!-- Owl -->
    <string name="my_courses">My Courses</string>
    <string name="featured">Featured</string>
    <string name="search">Search</string>
</resources>