<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:id="@+id/rootLayout"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:background="@android:color/transparent">

        <ImageView
            android:id="@+id/item_movie_image"
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:layout_gravity="top"
            android:contentDescription="@string/image"
            android:scaleType="centerCrop" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:layout_gravity="top"
            android:background="@drawable/fragment_shadows"
            android:contentDescription="@string/image" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/mgenres"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:gravity="center"
                    android:text="@string/genre"
                    android:textAllCaps="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@color/golden_gate"
                    android:textSize="12sp"
                    app:fontFamily="sans-serif-black" />

                <Button
                    android:id="@+id/btn_premuim"
                    android:layout_width="wrap_content"
                    android:layout_height="43dp"
                    android:background="@drawable/btn_premuim"
                    android:gravity="center"
                    android:text="@string/premuim"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:visibility="gone" />
            </LinearLayout>

            <TextView
                android:id="@+id/movietitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/title"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/grey_11"
                android:textSize="16sp"
                app:fontFamily="sans-serif-black" />

            <TextView
                android:id="@+id/movie_premuim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="3dp"
                android:background="@color/main_color"
                android:paddingStart="7dp"
                android:paddingTop="3dp"
                android:paddingEnd="7dp"
                android:paddingBottom="3dp"
                android:text="Premuim"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/grey_11"
                android:textSize="10sp"
                android:textStyle="bold"
                app:fontFamily="sans-serif-black"
                tools:text="Premuim" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    tools:ignore="UselessParent">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/add_to_favorite"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_margin="@dimen/spacing_middle"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:contentDescription="@string/image"
                            app:srcCompat="@drawable/add_from_queue" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/PlayButtonIcon"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/btn_gradient"
                            android:text="@string/lecture"
                            android:textAllCaps="true"
                            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                            android:textColor="@android:color/white"
                            android:textSize="12sp"
                            app:fontFamily="sans-serif-black" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/info_trailer"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_margin="@dimen/spacing_middle"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:contentDescription="@string/image"
                            app:srcCompat="@drawable/ic_info"
                            app:tint="@color/white" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</layout>
