<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/rootLayout"
        android:layout_width="150dp"
        android:layout_height="223dp"
        android:orientation="horizontal"
        android:padding="2dp">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:innerRadius="0dp"
            app:cardCornerRadius="10dp"
            app:cardPreventCornerOverlap="false">

            <ImageView
                android:id="@+id/item_movie_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/image"
                android:scaleType="centerCrop" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/item_recommended_shadow"
                android:contentDescription="@string/image"
                android:scaleType="centerCrop" />


            <TextView
                android:id="@+id/movie_premuim"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/margin_20"
                android:layout_marginStart="5dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/vip"
                android:paddingStart="4dp"
                android:paddingTop="3dp"
                android:paddingEnd="4dp"
                android:paddingBottom="4dp"
                android:text="VIP"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/grey_11"
                android:textSize="12sp"
                android:textStyle="bold"
                android:visibility="gone"
                app:fontFamily="sans-serif-black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/movietitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/title"
                    android:textAllCaps="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@color/grey_11"
                    android:textSize="10sp"
                    app:fontFamily="sans-serif-black" />


                <TextView
                    android:id="@+id/mgenres"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/main_color"
                    android:paddingStart="7dp"
                    android:paddingTop="3dp"
                    android:paddingEnd="7dp"
                    android:paddingBottom="3dp"
                    android:text="@string/genre"
                    android:textAllCaps="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@color/grey_11"
                    android:textSize="8sp"
                    android:textStyle="bold"
                    app:fontFamily="sans-serif-black"
                    tools:ignore="SmallSp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:baselineAligned="false"
                    android:gravity="center"
                    android:orientation="horizontal"
                    tools:ignore="UselessParent">

                    <ImageView
                        android:id="@+id/add_to_favorite"
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_margin="@dimen/spacing_middle"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:contentDescription="@string/image"
                        app:srcCompat="@drawable/add_from_queue" />


                    <ImageView
                        android:id="@+id/info_trailer"
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_margin="@dimen/spacing_middle"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:contentDescription="@string/image"
                        app:srcCompat="@drawable/ic_info"
                        app:tint="@color/white" />

                </LinearLayout>


            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </LinearLayout>
</layout>